styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

* {
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body {
    margin: 0;
    background-color: #2B2B2B;
    display: flex;
    flex-direction: column; 
    align-items: center;
}

.sketch-area {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 750px;
    width: 100%
}

.btn-container {
    padding: 32px 32px 0px 32px;
    flex: initial;
    display: flex;
    align-items: start;
    gap: 8px;
}

.btn {
    font-size: 12px;
    font-weight: bold;
    min-width: 80px;
    height: auto;
    padding: 8px;
    border-radius: 4px;
    background-color: #F5F5F5;
    color: #2B2B2B;
    border: none;
    outline: 1px solid #2B2B2B;
}

.clear {
    font-size: 12px;
    font-weight: bold;
    min-width: 80px;
    height: auto;
    padding: 8px;
    border-radius: 4px;
    background-color: #2B2B2B;
    color: #F5F5F5;
    border: none;
    outline: 1px solid #F5F5F5;
}

.container {
    padding: 32px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1px;
}

.square {
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #2B2B2B;
    width: 40px;
    height: 40px;
    border-radius: 2px;
}

.hover-effect {
    background-color: red;
}

